syntax = "proto3";

package app.v1;

import "google/type/datetime.proto";
import "validate/validate.proto";

message App {
  string id = 1;
  string name = 2;
  string github_install_id = 3;
  string org_id = 4;
  string created_by_id = 5;
  google.type.DateTime created_at = 6;
  google.type.DateTime updated_at = 7;
}

message GetAppRequest {
  string id = 1 [(validate.rules).string.uuid = true];
}

message GetAppResponse {
  App app = 1;
}

message GetAppsByOrgRequest {
  string org_id = 1 [(validate.rules).string.uuid = true];
}

message GetAppsByOrgResponse {
  repeated App apps = 1;
}

message DeleteAppRequest {
  string id = 1 [(validate.rules).string.uuid = true];
}

message DeleteAppResponse {
  bool deleted = 1;
}

message UpsertAppRequest {
  string id = 1 [(validate.rules).string.uuid = true];
  string name = 2;
  string org_id = 3 [(validate.rules).string.uuid = true];
  string github_install_id = 4;
  string created_by_id = 5;
}

message UpsertAppResponse {
  App app = 1;
}
